update delete api
